# pytest-mcp-tools

./: .gitignore  CHANGELOG.md  README.md  TODO.md  mkdocs.yml  pyproject.toml  versions.json
.claude/commands/: implement-finish.md  implement-tests.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
0.1.8/: 404.html  index.html  objects.inv  sitemap.xml
0.1.8/search/: search_index.json
0.1.9/: 404.html  index.html  sitemap.xml
0.1.9/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/search/: search_index.json
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/search/: search_index.json
docs/: index.md
docs-validate/: Dockerfile  docker-compose.yaml
inspector/: docker-compose.yaml
lint/: Dockerfile  docker-compose.yaml  lint.sh
reformat/: Dockerfile  docker-compose.yaml  reformat.sh
src/pytest_mcp_tools/: plugin.py
test-with-docker-image/: Dockerfile  docker-compose.yaml
test-with-http-server/: Dockerfile  docker-compose.yaml
test-with-stdio-server/: Dockerfile  docker-compose.yaml
tests/: Dockerfile  docker-compose.yaml  test_integration.py  test_unit.py
tests/servers/annotations_server/: README.md  server.py
tests/servers/basic_server/: Dockerfile  README.md  server.py
tests/servers/conflicting_annotations_server/: README.md  server.py
tests/servers/deeply_nested_invalid_type_server/: server.py
tests/servers/deeply_nested_server/: server.py
tests/servers/duplicate_names_server/: README.md  requirements.txt  server.py
tests/servers/empty_server/: Dockerfile  README.md  requirements.txt  server.py
tests/servers/example_missing_required_server/: server.py
tests/servers/example_wrong_format_server/: server.py
tests/servers/example_wrong_type_server/: server.py
tests/servers/examples_server/: server.py
tests/servers/hybrid_server/: Dockerfile  README.md  server.py
tests/servers/incorrect_error_server/: Dockerfile  requirements.txt  server.py
tests/servers/invalid_field_types_server/: Dockerfile  README.md  (+1 more)
tests/test_samples/: test_sample_math.py
visual-integration-check/: Dockerfile  README.md  docker-compose.yaml
(+21 files in other folders)
