[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-mcp-tools"
dynamic = ["version"]
description = ""
readme = "README.md"
authors = [
    { name = "Sinan Ozel", email = "coding@sinan.slmail.me" },
]
license = { file = "LICENSE" }
dependencies = [
    "requests>=2.31.0",
    "mcp>=1.0.0",             # MCP SDK for connecting to MCP servers
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
]

[project.entry-points.pytest11]
pytest_mcp_tools = "pytest_mcp_tools.plugin"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",          # For running tests
    "pytest-cov>=3.0.0",      # For test coverage reporting
    "pytest-depends>=1.0.1",  # For test dependency management
    "pytest-mock>=3.14.0",    # For mocking in tests
    "httpx>=0.28.1",          # To make more complex calls, such as streaming.
]

dev = [
    "isort>=5.12.0",          # For import sorting
    "ruff>=0.12.11",          # For linting
    "black>=24.0.0",          # For code formatting (Black)
    "docformatter>=1.7.5",    # For formatting docstrings
]

docs = [
    "mkdocs>=1.5.0,<2.0.0",   # Pin to MkDocs 1.x for Material compatibility
    "mkdocs-material>=9.0.0", # Material theme for MkDocs
    "mkdocstrings[python]>=0.24.0",  # API documentation from docstrings
    "mike",
]

publish = [
    "packaging>=25.0",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = ["RUF001"]

[tool.black]
line-length = 80
target-version = ['py311']

[tool.ruff.lint]
select = ["I", "F", "E", "W"]
ignore = ["E501"]

[tool.docformatter]
wrap-summaries = 79
wrap-descriptions = 79
in-place = true
recursive = true

[tool.setuptools.dynamic]
version = { attr = "pytest_mcp_tools.__version__" }

[project.urls]
Homepage = "https://github.com/sinan-ozel/pytest-mcp-tools"
Issues = "https://github.com/sinan-ozel/pytest-mcp-tools/issues"
